# dynamic-conformal-metamaterials

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
blockymetamaterials/: analysis_utils.py  dynamics.py  energy.py  geometry.py  kinematics.py  loading.py  main.py  objective.py  plotting.py  utils.py
lineardata/strains_linear_eigenmodes/: (grad,diln,s1,s2,stot,rotn)_24x16_initialangle_30.0_clamped_100modes.npz
notebooks/conformalanalysis_notebooks/: calculate_conformal_fit.ipynb  calculate_conservation_metrics.ipynb  figure_plots.ipynb
notebooks/linear_notebooks/: dilational_metamaterial_LinearRS_relaxing_regime.ipynb  dilational_metamaterial_LinearRS_time-harmonic_regime.ipynb
notebooks/nonlinear_notebooks/: dynamics_of_conformal_metamaterials.ipynb
scripts/: laser_cut.py
scripts/tracking/: damping_ratio.py  export_frames.py  pick_color.py  pick_thresholding.py  preprocessing_color.py  preprocessing_gray.py  tracking_color.py  tracking_gray.py  tracking_gray_xcorr.py  tracking_points.py  tracking_xcorr_test.py  utils.py
tests/: test_blockymetamaterials.py
